--- a/Checklist/css/style.css
+++ b/Checklist/css/style.css
@@ -71,10 +71,11 @@ li{
     display: inline-block;
 }
 .list{
-    width: 100%;
+    width: 33%;
     padding: 5% 2.5% 5% 2.5%;
     margin-bottom: 2.5%;
     background-color: #419ba7;
+    display: inline-block;
 }
 .list p {
     font-size: 20px;
